welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:8: error: reassignment to val
		x=x+4;
                 ^Runner:11: error: reassignment to val
		x=x+2;
                 ^Runner:16: error: reassignment to val
		x=x+2;
                 ^Runner:19: error: reassignment to val
		x=x+4;
                 ^Runner:21: error: reassignment to val
		if (x=16*4 || x=16*4*2 || x=16*4*3 || x=16*4*4 || x=16*4*5 || x=16*4*6 || x=16*4*7) {
                     ^Runner:22: error: reassignment to val
			y=y+1;
                         ^